<resources>
    <string name="app_name">CaroO Live</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_menu_video">Video</string>
    <string name="navigation_drawer_menu_notice">Notice</string>
    <string name="navigation_drawer_menu_blackbox">Video Files</string>
    <string name="navigation_drawer_menu_setting">General Settings</string>
    <string name="navigation_drawer_menu_vehicle_setting">Car Settings</string>
    <string name="navigation_drawer_menu_blackbox_setting">Dashcam Settings</string>
    <string name="navigation_drawer_menu_stipulation">Terms of Service</string>
    <string name="navigation_drawer_menu_version_info">Version Info.</string>
    <string name="navigation_drawer_menu_user_info">User Info.</string>
    <string name="navigation_drawer_menu_channel_shotcut">User\nChannels</string>
    <string name="navigation_drawer_menu_event">Useful Links</string>
    <string name="navigation_drawer_menu_log">Issue Report</string>
    <string name="action_settings">Settings</string>
    <string name="action_log_report">Log Report</string>
    <string name="action_discovery">Search</string>
    <string name="action_unit_setting">Unit Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_driving_mode">Driving</string>
    <string name="action_obd_reconnect">Connect OBD</string>
    <string name="action_share">Share</string>
    <string name="action_logout">Logout</string>
    <string name="action_withdrawal">Withdrawal</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_close">Close</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_home">Home</string>
    <string name="btn_previous">Prev.</string>
    <string name="btn_next">Next</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_ers_call">E-Call</string>
    <string name="btn_ers_sms">E-SMS</string>
    <string name="btn_ers_youtube">YouTube</string>
    <string name="btn_preview_close">Close Preview</string>
    <string name="btn_done">Done</string>
    <string name="btn_later">Later</string>
    <string name="btn_register_vehicle">Register</string>
    <string name="btn_google_auth">Google Authentication</string>
    <string name="btn_google_sign_in">Google Login</string>
    <string name="btn_facebook_auth">Facebook Authentication</string>
    <string name="btn_facebook_sign_in">Facebook Login</string>
    <string name="btn_join">Join</string>
    <string name="btn_start">Start</string>
    <string name="btn_buy">Purchase</string>
    <string name="btn_withdraw">Withdrawal</string>
    <string name="btn_modify">Edit</string>
    <string name="btn_login">Login</string>
    <string name="btn_add">Add</string>
    <string name="noti_driving_content_title">@string/app_name</string>
    <string name="noti_driving_content_on_driving">Driving Started</string>
    <string name="noti_driving_content_off_driving">Paused</string>
    <string name="noti_trip_report_driving_stopped">Driving Ended</string>
    <string name="noti_trip_report_title">Trip Summary</string>
    <string name="noti_trip_report_summary">New Trip for %1$s sec, %2$s %3$s Driven.</string>
    <string name="dialog_message_cannot_sign_in_google">Authentication Failed.\n\nRetry?</string>
    <string name="dialog_message_cannot_sign_in_facebook">Authentication Failed.\n\nRetry?</string>
    <string name="dialog_message_cannot_sign_in">Connection Failed.\n\nRetry?</string>
    <string name="dialog_message_cannot_sign_in2">Login Failed.\n\nRetry in %d sec</string>
    <string name="dialog_title_driving_on">Driving Mode Started</string>
    <string name="dialog_message_driving_on">Ignition On Detected.\n\nMove to Driving Mode?\n\nWill move to Driving Mode in %d sec.</string>
    <string name="dialog_title_driving_off">Driving Ended</string>
    <string name="dialog_message_driving_off">Ignition Off Detected.\n\nWill be terminated in %d sec.</string>
    <string name="dialog_title_driving_exit">Exit</string>
    <string name="dialog_message_driving_exit">Will be terminated in %d sec.</string>
    <string name="dialog_title_need_register_vehicle">Register Your Car</string>
    <string name="dialog_message_need_register_vehicle">No Registered Cars\n\nRegister now?</string>
    <string name="dialog_title_network_error">Network Error</string>
    <string name="dialog_message_network_error">Failed to connect server.\n\nRetry?</string>
    <string name="dialog_title_server_error">Operation Failed</string>
    <string name="dialog_message_server_error">Server operation failed.\n\nRetry?</string>
    <string name="dialog_title_edit_vehicle">Edit Car Info.</string>
    <string name="dialog_message_edit_vehicle">Old car info. will be deleted and replaced with new Info.\n\nGo on?</string>
    <string name="dialog_title_add_vehicle">Add New Cars</string>
    <string name="dialog_message_add_vehicle">Do you want add a new car?</string>
    <string name="dialog_title_confirm_vehicle_info">Check Car Info.</string>
    <string name="dialog_message_discovering_obd_device">Searching OBD devices\u2026</string>
    <string name="dialog_title_connect_obd_device">Connecting OBD</string>
    <string name="dialog_message_connect_obd_device">%s: Try to connect the selected OBD?</string>
    <string name="dialog_message_connecting_obd_device">Connecting OBD...\n\nWait for a while. \u2026</string>
    <string name="dialog_message_cannot_connect_obd_device">Failed to connect OBD.\n\nRetry?</string>
    <string name="dialog_message_not_supported_obd_protocol">Invalid protocol detected.</string>
    <string name="dialog_message_insufficient_pid">Not enough OBD data supported.</string>
    <string name="dialog_title_input_odometer">Odometer</string>
    <string name="dialog_message_input_odometer">Type in odometer value of your car.</string>
    <string name="dialog_message_updating_odometer">Updating odometer value...\u2026</string>
    <string name="dialog_message_vehicle_setup_successfully">Car setting has beeng finished.</string>
    <string name="dialog_title_enable_blackbox">Dashcam</string>
    <string name="dialog_message_enable_blackbox">Do you use dashcam function?\n\nYou can do this later.</string>
    <string name="dialog_message_wait_for">Wait for a while...\u2026</string>
    <string name="dialog_title_blackbox_storage_warning">Error in Storage Setting</string>
    <string name="dialog_message_blackbox_storage_warning">Not enough or no Storage for dashcam.\n\nPlease update settings.</string>
    <string name="dialog_message_blackbox_init">Initializing dashcam...\n\nWait for a while.\u2026</string>
    <string name="dialog_title_setup_finished">Settings Completed!</string>
    <string name="dialog_message_setup_finished">Initial settings have been successfully finished. </string>
    <string name="dialog_title_ers">Emergency</string>
    <string name="dialog_mesage_ers">Closed automatically in %d sec.</string>
    <string name="dialog_message_close_preview">Preview will be closed in %d sec.</string>
    <string name="dialog_message_obd_recovery">No data from OBD device.\n\nTry to restart BT of your phone?</string>
    <string name="dialog_message_quick_launch_navi">Navigation app will be started automatically in %d sec.</string>
    <string name="dialog_message_logout">Sure to log out now?</string>
    <string name="dialog_message_withdrawal">After withdrawn, all registered info and history will be deleted, and cannot be restored. \n\nSure to withdraw?</string>
    <string name="dialog_title_buy">Purchase</string>
    <string name="dialog_body_goods_name">Product:</string>
    <string name="dialog_body_subtraction_point">Point Deducted:</string>
    <string name="dialog_body_mandatory">Required Info:</string>
    <string name="dialog_body_phone_number_hint">Mobile Phone No.</string>
    <string name="dialog_body_mandatory_text">Phone number for receiving SMS.</string>
    <string name="dialog_body_warning_1">* Notice: This coupon will be sent later.</string>
    <string name="dialog_body_warning_2">Usually 2 or 3 days required for handling.</string>
    <string name="dialog_title_buy_confirm">Purchase Confirmation</string>
    <string name="dialog_body_warning_3">Refund for this purchase is not allowed.</string>
    <string name="dialog_body_phone_number">Phone No.:</string>
    <string name="intro_pokevian">© POKEVIAN</string>
    <string name="intro_service_description">CaroO Live™ is \na simple connected car service using ELM327 compatible BT OBD and your phone. CaroO Live provides real-time monitoring and diagnostics of your car as weel as trip statistics and eco-driving guide.</string>
    <string name="intro_blackbox_storage_error">No available storage for dashcam. \nDashcam cannot be started.</string>
    <string name="general_setting_impact_sensitivity">Collision Detection</string>
    <string name="general_setting_ers">Emergency Contact</string>
    <string name="general_setting_ers_enabled">Auto Emergency Contact</string>
    <string name="general_setting_ers_enabled_summary">Emergency call or SMS automatically when collision detected</string>
    <string name="general_setting_ers_call">E-call</string>
    <string name="general_setting_ers_call_summary">Please enter emergency call number.</string>
    <string name="general_setting_ers_sms">E-SMS</string>
    <string name="general_setting_ers_sms_summary">Please enter phone number and message for emergency report.</string>
    <string name="general_setting_ers_youtube_privacy">YouTube Share</string>
    <string name="general_setting_ers_target">Emergency Contact Type</string>
    <string name="general_setting_quick_launch_navi">Navigation App</string>
    <string name="general_setting_quick_launch_navi_summary">Please choose your favorite car navigation app.</string>
    <string name="general_setting_auto_launch_navi_enabled">Auto-launch Navigation App</string>
    <string name="general_setting_auto_launch_navi_enabled_summary">Launch car navigation app while driving mode is activated.</string>
    <string name="general_setting_overspeed_threshold">Overspeed Alarm</string>
    <string name="general_setting_engine_off_detection_enabled">Ignition Off Detection</string>
    <string name="general_setting_engine_off_detection_enabled_summary">Terminate automatically when ignition off is detected.</string>
    <string name="general_setting_engine_on_detection_enabled">Ignition On Detection</string>
    <string name="general_setting_sound_effect_enabled">Sound Effect</string>
    <string name="general_setting_sound_effect_enabled_on">Turn on sound effect.</string>
    <string name="general_setting_floating_enabled">Floating Display</string>
    <string name="general_setting_floating_enabled_summary">Use floating display in background mode.</string>
    <string name="driving_average_fuel_economy">Avg. Fuel Eco</string>
    <string name="driving_fuel_consumption">Fuel Consum.</string>
    <string name="driving_harsh_acceleration">Harsh Accel</string>
    <string name="driving_harsh_deceleration">Harsh Brake</string>
    <string name="driving_no_fuel_economy_exp">--.-</string>
    <string name="driving_no_fuel_consumption_exp">--.-</string>
    <string name="driving_no_count_exp">--</string>
    <string name="volume_unit_l">L</string>
    <string name="fuel_economy_unit_kpl">km/L</string>
    <string name="empty_string_value">--</string>
    <string name="empty_int_value">---</string>
    <string name="empty_trip_info">( --.- km | --:--)</string>
    <string name="main_rank_position">Rank</string>
    <string name="point">Point</string>
    <string name="rank_total">Avg. Score</string>
</resources>