<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2014. Pokevian Ltd.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="general_preference">

    <ListPreference
        android:defaultValue="@string/impact_sensitivity_default"
        android:dialogTitle="@string/general_setting_impact_sensitivity"
        android:entries="@array/impact_sensitivity_entries"
        android:entryValues="@array/impact_sensitivity_values"
        android:key="impact_sensitivity"
        android:title="@string/general_setting_impact_sensitivity" />

    <Preference
        android:key="ers"
        android:persistent="false"
        android:title="@string/general_setting_ers" />

    <Preference
        android:key="quick_launch_app_navi"
        android:persistent="false"
        android:summary="@string/general_setting_quick_launch_navi_summary"
        android:title="@string/general_setting_quick_launch_navi" />

    <CheckBoxPreference
        android:key="auto_launch_navi_app_enabled"
        android:summary="@string/general_setting_auto_launch_navi_enabled_summary"
        android:title="@string/general_setting_auto_launch_navi_enabled" />

    <!--<Preference
        android:key="quick_launch_app_custom"
        android:persistent="false"
        android:title="@string/general_setting_quick_launch_custom"
        android:summary="@string/general_setting_quick_launch_custom_summary"/>-->

    <EditTextPreference
        android:defaultValue="110"
        android:imeOptions="actionDone|flagNoExtractUi"
        android:inputType="number"
        android:key="overspeed_threshold"
        android:selectAllOnFocus="true"
        android:title="@string/general_setting_overspeed_threshold" />

    <ListPreference
        android:defaultValue="@string/auto_start_mode_normal_default"
        android:dialogTitle="@string/general_setting_engine_on_detection_enabled"
        android:entries="@array/auto_start_mode_normal_entries"
        android:entryValues="@array/auto_start_mode_normal_values"
        android:key="engine_on_detection_enabled_normal"
        android:title="@string/general_setting_engine_on_detection_enabled" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="engine_off_detection_enabled"
        android:summary="@string/general_setting_engine_off_detection_enabled_summary"
        android:title="@string/general_setting_engine_off_detection_enabled" />

    <!--<Preference
        android:key="engine_off_detection_preference"
        android:summary="@string/general_setting_engine_off_detection_enabled_summary"
        android:title="@string/general_setting_engine_off_detection_enabled">
    </Preference>-->

    <!--<PreferenceScreen
        android:key="engine_off_detection_screen"
        android:summary="@string/general_setting_engine_off_detection_enabled_summary"
        android:title="@string/general_setting_engine_off_detection_enabled">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="engine_off_detection_enabled"
            android:summary="@string/general_setting_engine_off_detection_enabled_summary"
            android:title="@string/general_setting_engine_off_detection_enabled" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="engine_off_detection_isg"
            android:dependency="engine_off_detection_enabled"
            android:summary="@string/general_setting_engine_off_detection_isg_enabled_summary"
            android:title="@string/general_setting_engine_off_detection_isg_enabled" />
    </PreferenceScreen>-->

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="sound_effect_enabled"
        android:summary="@string/general_setting_sound_effect_enabled_on"
        android:title="@string/general_setting_sound_effect_enabled" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="floating_enabled"
        android:summary="@string/general_setting_floating_enabled_summary"
        android:title="@string/general_setting_floating_enabled" />

</PreferenceScreen>