<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014. Pokevian Ltd.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingLeft="10dp"
             android:paddingRight="22dp">

    <TableRow>

        <TextView
            android:layout_width="80dp"
            android:ellipsize="end"
            android:gravity="right"
            android:includeFontPadding="false"
            android:text="@string/driving_average_fuel_economy"
            android:textColor="#999999"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="80dp"
            android:ellipsize="end"
            android:gravity="right"
            android:includeFontPadding="false"
            android:text="@string/driving_fuel_consumption"
            android:textColor="#999999"
            android:textSize="12sp"/>
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/fuel_economy_text"
            android:layout_width="80dp"
            android:gravity="right"
            android:includeFontPadding="false"
            android:text="@string/driving_no_fuel_economy_exp"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/fuel_consumption_text"
            android:layout_width="80dp"
            android:gravity="right"
            android:includeFontPadding="false"
            android:text="@string/driving_no_fuel_consumption_exp"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:textStyle="bold"/>
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/fuel_economy_unit_text"
            android:layout_width="80dp"
            android:gravity="right"
            android:includeFontPadding="false"
            android:text="@string/fuel_economy_unit_kpl"
            android:textColor="#999999"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/fuel_consumption_unit_text"
            android:layout_width="80dp"
            android:gravity="right"
            android:includeFontPadding="false"
            android:text="@string/volume_unit_l"
            android:textColor="#999999"
            android:textSize="12sp"/>
    </TableRow>

    <TableRow android:layout_marginTop="20dp">

        <TextView
            android:layout_width="80dp"
            android:ellipsize="end"
            android:gravity="right"
            android:includeFontPadding="false"
            android:text="@string/driving_harsh_acceleration"
            android:textColor="#999999"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="80dp"
            android:ellipsize="end"
            android:gravity="right"
            android:includeFontPadding="false"
            android:text="@string/driving_harsh_deceleration"
            android:textColor="#999999"
            android:textSize="12sp"/>
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/harsh_accel_text"
            android:layout_width="80dp"
            android:gravity="right"
            android:includeFontPadding="false"
            android:text="@string/driving_no_count_exp"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/harsh_decel_text"
            android:layout_width="80dp"
            android:gravity="right"
            android:includeFontPadding="false"
            android:text="@string/driving_no_count_exp"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:textStyle="bold"/>
    </TableRow>

</TableLayout>