<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2014. Pokevian Ltd.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="1">

        <TableRow>

            <TextView
                android:text="@string/dialog_body_goods_name"
                android:textColor="#565656"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title"
                android:textColor="#686868"
                android:textSize="15sp"
                tools:text="S-OIL 상품권 3만원권" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_marginRight="10dp"
                android:text="@string/dialog_body_subtraction_point"
                android:textColor="#565656"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#44c3e0"
                    android:textSize="15sp"
                    tools:text="30,0000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="@string/point"
                    android:textColor="#686868"
                    android:textSize="15sp" />

            </LinearLayout>

        </TableRow>

        <TableRow android:layout_height="wrap_content">

            <TextView
                android:text="@string/dialog_body_mandatory"
                android:textColor="#565656"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:text="@string/dialog_body_mandatory_text"
                android:textColor="#686868"
                android:textSize="15sp" />
        </TableRow>
    </TableLayout>

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_message_input_odometer"
        android:textAppearance="?android:attr/textAppearanceMedium"/>-->

    <EditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/dialog_body_phone_number_hint"
        android:imeOptions="flagNoExtractUi|actionDone"
        android:inputType="textNoSuggestions|phone"
        android:selectAllOnFocus="true"
        android:textColor="#686868"
        android:textColorHint="#e5e5e5"
        android:textColorHighlight="#ffffff"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dialog_body_warning_1"
        android:textColor="#ff8e8e"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dialog_body_warning_2"
        android:textColor="#ff8e8e"
        android:textSize="12sp" />

</LinearLayout>