<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/driving_score_ranking"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="7dp"
        android:layout_weight="1"
        android:background="@drawable/ranking_number"
        android:gravity="center"
        android:text="@string/empty_int_value"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4.3"
        android:background="@drawable/ranking_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/member_nm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:text="@string/empty_string_value"
            android:textColor="#686868"
            android:textSize="13dp"
            tools:background="#ffff00"
            tools:text="슬레이어" />

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textColor="#686868"
            android:textSize="10dp"
            android:text="@string/empty_trip_info"
            tools:background="#ff00ff"
            tools:text="(3 km | 00:05)" />

        <TextView
            android:id="@+id/driving_score"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/empty_int_value"
            android:textColor="#686868"
            android:textSize="18dp"
            android:textStyle="bold"
            tools:text="999" />

    </LinearLayout>
</LinearLayout>

